# Hex

./: .gitignore  LICENSE.md
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: QColor.9D2A50F010F1C036.idx  QImage.C35BFEFDEA86F5A8.idx  QMainWindow.7113F6A3A6DDB824.idx  QPainterPath.AA7C98033F18AD59.idx  QPolygonF.B658BEF84E0D7FF7.idx  QRandomGenerator.2EBB572FF0C04372.idx  QString.1C723E3A69677CE1.idx  QTcpSocket.EBF1AA9BD6782B82.idx  QVector2D.71FCA0224FCEFB0D.idx  QWheelEvent.79FFA43B1A584CD3.idx  QtMath.6D115D7A82E18640.idx  allocated_ptr.h.95627CC6742827C3.idx  basic_ios.h.5B05F8DA67EC6948.idx  basic_ios.tcc.5E0866760DDCF291.idx  basic_string.h.3EA6F3E3C03CF711.idx  basic_string.tcc.4EF75573B7A58625.idx  beta_function.tcc.5B375847E4658250.idx  biome.cpp.B0799890D3E575D6.idx  biome.h.C4CC4F28ACA338BE.idx  bitset.0039EB313049B7B9.idx  client.cpp.2FC0182152896375.idx  client.h.662E2E20E7C1540F.idx  cmath.A0A08F382EA62983.idx  codecvt.44E9C2378CCC9021.idx  codecvt.h.BC50E5968D883A48.idx  exp_integral.tcc.60FCA382E9E1B598.idx  field.h.121F175688F1C11B.idx  fs_dir.h.F4E0CA75885A0704.idx  fs_fwd.h.678E91BBE5DFD138.idx  fs_path.h.70A56D965B55DCEC.idx  functional.54F2E4FEBE22653C.idx  gamewindow.cpp.DD864B581B1D6179.idx  gamewindow.h.F5D6A72415D74F9B.idx  gamma.tcc.EC07CEE7A1297F11.idx  istream.8E17176BD22D72CD.idx  istream.tcc.DF1D8104DD8B6B91.idx  list.tcc.F065556DD02680CA.idx  locale_classes.h.94E0B5A3D9E31223.idx  locale_conv.h.466916FE8CF646B1.idx  locale_facets.h.1ABD778FB97800F2.idx  (+86 more)
Client/src/: biome.cpp  client.cpp  client.h  field.cpp  field.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  structure.cpp  structure.h  unit.cpp  unit.h
Server/: CMakeLists.txt  game.cpp  game.h  main.cpp  server.cpp  server.h
Server/src/: CMakeLists.txt  game.cpp  game.h  server.cpp  server.h  structure.cpp  structure.h  user.cpp  user.h
build-src-Desktop_Qt_6_6_1_GCC_64bit-Debug/: .ninja_log  CMakeCache.txt  HexagonalMap  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-src-Desktop_Qt_6_6_1_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-37cb38423d71bd6b6d29.json  cmakeFiles-v1-6603e4944b88f9142b56.json  codemodel-v2-167dff3567e3a5f025c4.json  directory-.-Debug-1ff0530b3e4c756d7934.json  index-2024-04-27T10-46-32-0865.json  target-HexagonalMap-Debug-f1402cd53c8982ca841f.json  target-HexagonalMap_autogen-Debug-f5d0514f05b6f48ad721.json  target-HexagonalMap_autogen_timestamp_deps-Debug-cd81fb93107a5676b170.json
build-src-Desktop_Qt_6_6_1_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-src-Desktop_Qt_6_6_1_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-src-Desktop_Qt_6_6_1_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QApplication.5F0921378D8BCBEF.idx  QDebug.B005786FB0521CC0.idx  QList.845739C734C5BEDF.idx  QMainWindow.F6A91D2BDA86F108.idx  QObject.6C9F6D384FB8E97B.idx  QPainter.A556D945E48739F2.idx  QPixmap.2B886F9A773D1CDA.idx  QPolygonF.03FEF67E9DCAF72B.idx  QRandomGenerator.48FAF188CE12B06C.idx  QRect.3D0B6AAF80CD8DE8.idx  QSize.9C9C1F892E28EF1B.idx  QSizeF.758B5C01F1865200.idx  QTransform.0EE39ABBF7419818.idx  QVector2D.5D26E3340ACC774C.idx  QWheelEvent.D021E4A4A649D4AD.idx  QtMath.2739F50A9B004D9C.idx  __stddef_max_align_t.h.530E78928D380D20.idx  align.h.5494118AD529CE49.idx  alloc_traits.h.7ED6955E7AD16F96.idx  allocated_ptr.h.4AFD46821EA88DAE.idx  assert.h.F44EF353D67C7E11.idx  basic_ios.h.56903B99DC4D5E6A.idx  basic_ios.tcc.D00A38F22813AC99.idx  basic_string.tcc.4BB4F100F6A713CA.idx  bessel_function.tcc.FA739B7B1B6F4840.idx  beta_function.tcc.8F132FF8CBBB6F52.idx  biome.cpp.0523DD304595CC5A.idx  biome.h.ACB1A94C225DD7F7.idx  c++config.h.A758E8FF275E0068.idx  (+241 more)
build-src-Desktop_Qt_6_6_1_GCC_64bit-Debug/HexagonalMap_autogen/: deps  moc_predefs.h
src/: CMakeLists.txt  CMakeLists.txt.user.9b08cde  CMakeLists.txt.user.d371c65  CMakeLists.txt.user.fe16b36  biome.cpp  biome.h  client.cpp  client.h  field.cpp  field.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  structure.cpp  structure.h  texture.cpp  texture.h  unit.cpp  unit.h
